Fixed some deprecated method